--- a/Resume_Project/index.html
+++ b/Resume_Project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Resume</title>
 </head>
 <body>
     <div>
@@ -72,6 +72,16 @@
             <li></li>
         </ul>
     </section>
+    <section>
+        <h2>Frequently Asked Questions : </h2>
+        <details>
+            <summary>What is your Name?</summary>
+            <p>My name is Abhishek Chaudhary</p>
+        </details>
+    </section>
+    <footer>
+        <p>&#169; 2023 Abhishek Chaudhary. All Rights Reserved</p>
+    </footer>
     </div>
 </body>
 </html>
